Modul data barang berhasil di perbaharui bagian tambah/hapus barang

--- a/global_css.css
+++ b/global_css.css
@@ -123,7 +123,7 @@ table tr:hover {
 	height: 160px;
 	background-color: #ffffff;
 	border-bottom: 3px solid #ff9f43;
-		}
+}
 .column-pink-1 {
 	padding-top: 32px;
 	text-align: center;
@@ -140,6 +140,33 @@ table tr:hover {
 }
 #page-list {
 	display: inline-flex;
+}
+#form {
+	background-color: #FFFFFF;
+	box-shadow: 0 0 4px black;
+	width: 550px;
+	height: 890px;
+	margin: 55px auto;
+}
+.header-form {
+	text-align: center;
+	color: #FFFFFF;
+	background-color: #24305E;
+	padding: 28px;
+}
+.form-group{
+	margin: 10px;
+}
+#form .form-group {
+	margin: 25px 40px;
+}
+#closeForm {
+	position: absolute;
+	top: 49px;
+	color: white;
+	font-size: 25px;
+	margin-left: 528px;
+	cursor: pointer;
 }
 .font-neue { font-family: 'Bebas Neue'; }
 footer {
